# claude-web-credit

./: .gitignore  ARCHITECTURE_REVIEW.md  CRAFTING_SYSTEM.md  DEVELOPMENT.md  EQUIPMENT_SYSTEM.md  README.md  TARGETING_IMPLEMENTATION.md  TESTING_GUIDE.md  main.py
data/: spells.json
docs/: CLIENT_SERVER_ARCHITECTURE.md  COMPONENT_COMMUNICATION.md  MAGIC_INTEGRATION.md  MAGIC_SYSTEM.md
examples/: abstraction_demo.py  magic_system_example.py
roguelike/: README.md  main.py  pyproject.toml
roguelike/src/roguelike/commands/: actions.py  command.py  executor.py
roguelike/src/roguelike/components/: health.py  level.py
roguelike/src/roguelike/data/: __init__.py
roguelike/src/roguelike/engine/: events.py  game_engine.py
roguelike/src/roguelike/entities/: actor.py  monster.py
roguelike/src/roguelike/systems/: ai.py  ai_system.py  combat.py  combat_system.py  turn_manager.py
roguelike/src/roguelike/ui/: renderer.py
roguelike/src/roguelike/world/: game_map.py  procgen.py  tile.py
roguelike/tests/: test_ai_system.py  test_events.py  test_game_engine.py  test_monster.py  test_movement_system.py  test_player.py  test_position.py  test_procgen.py  test_protocols.py  test_turn_manager.py
tests/: test_actor.py  test_ai_states.py  test_ai_system.py  test_combat.py  test_combat_system.py  test_command_factory_level_transition.py  test_commands.py  test_component_factories.py  test_components.py  test_crafting_commands.py  test_crafting_component.py  test_crafting_events.py  test_crafting_integration.py  test_crafting_system.py  test_entity.py  test_entity_loader.py  (+49 more)
(+73 files in other folders)
